[package]
name = "encoded_string"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8.30"
serde = { version = "1.0.133", features = ["derive"] }

[dev-dependencies]
csv = "1.1.6"
serde_json = "1.0.74"
